--- a/portfolio.html
+++ b/portfolio.html
@@ -396,10 +396,10 @@
     <!--Footer-->
     <footer class="footer">
         <div class="container footer__container">
-            <div class="">
-                <a href="index.html" rel="_self" class="link logo">Web<span class="logo__white">Studio</span></a>
+            <div class="footer__box">
+                <a href="index.html" rel="_self" class="link footer__logo logo">Web<span class="logo__white">Studio</span></a>
                 <address class="address">
-                    <ul class="address__list list">
+                    <ul class="address-list list">
                         <li class="address__item">
                             <a class="address__link link" href="https://goo.gl/maps/TfK9JgmZnGoNyCuA9" target="_blank"
                                 rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
