--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
     <footer class="footer">
         <div class="container footer__container">
             <div class="footer__box">
-                <a href="index.html" rel="_self" class="link logo">Web<span class="logo__white">Studio</span></a>
+                <a href="index.html" rel="_self" class="link footer__logo logo">Web<span class="logo__white">Studio</span></a>
                 <address class="address">
                     <ul class="address-list list">
                         <li class="address__item">
